--- a/slides/background/theory-to-data.qmd
+++ b/slides/background/theory-to-data.qmd
@@ -11,6 +11,12 @@ format:
         packages: {'[+]': ['bussproofs','bbox','colorbox']}
 ---
 
+# Background
+
+Test.
+
+---
+
 ## The bridge from theory to data
 
 Semantic theory has achieved remarkable success in characterizing compositional structure of meaning
