Add probmods reference.

--- a/pds.bib
+++ b/pds.bib
@@ -2515,13 +2515,13 @@ Publisher: American Psychological Association},
 	keywords = {natural language semantics, analysis of counter factuals, Bayesian interpretation, Bayesian natural language semantics, Bayesian networks, Bayesian Pragmatics, causal Bayesian models, computational logic, computational natural language interpretation, logic and semantics, natural language processing, Signal processing and probability, stochastic methods for language interpretation, Syntax-semantics distinction},
 }
 
-@misc{goodman_probabilistic_nodate,
-	title = {Probabilistic {Models} of {Cognition} - 2nd {Edition}},
-	url = {http://probmods.org/},
-	urldate = {2024-06-30},
-	journal = {Probabilistic Models of Cognition},
-	author = {Goodman, Noah D. and Tenenbaum, Joshua B. and Buchsbaum, Daphna and Hartshorne, Joshua and Hawkins, Robert and O'Donnell, Timothy and Tessler, Michael Henry},
-	file = {Probabilistic Models of Cognition - 2nd Edition:/home/juliangrove/Documents/zotero/storage/JFDC54BM/probmods.org.html:text/html},
+@misc{goodman_probabilistic_2016,
+  title = {{Probabilistic Models of Cognition}},
+  edition = {Second},
+  author = {Goodman, Noah D and Tenenbaum, Joshua B. and The ProbMods Contributors},
+  year = {2016},
+  howpublished = {\url{http://probmods.org/v2}},
+  note = {Accessed: 2025-6-23}
 }
 
 @article{montague_universal_1970,
