--- a/pds.bib
+++ b/pds.bib
@@ -4284,6 +4284,193 @@ Publisher: Open Library of Humanities},
 	year = {1957},
 }
 
+@article{bard_magnitude_1996,
+  author =        {Bard, Ellen Gurman and Robertson, Dan and
+                   Sorace, Antonella},
+  journal =       {Language},
+  pages =         {32--68},
+  title =         {Magnitude estimation of linguistic acceptability},
+  year =          {1996},
+  volume = {72},
+  number={1},
+  doi={10.2307/416793}
+}
+
+@article{featherston_magnitude_2005,
+  author =        {Featherston, Sam},
+  journal =       {Lingua},
+  number =        {11},
+  pages =         {1525--1550},
+  title =         {Magnitude estimation and what it can do for your
+                   syntax: {Some} wh-constraints in {German}},
+  volume =        {115},
+  year =          {2005},
+  doi={10.1016/j.lingua.2004.07.003}
+}
+
+@article{featherston_data_2007,
+  author =        {Featherston, Sam},
+  journal =       {Theoretical Linguistics},
+  number =        {3},
+  pages =         {269--318},
+  title =         {Data in generative grammar: {The} stick and the
+                   carrot},
+  volume =        {33},
+  year =          {2007},
+  doi={10.1515/TL.2007.020}
+}
+
+@article{gibson_weak_2010,
+  author =        {Gibson, Edward and Fedorenko, Evelina},
+  journal =       {Trends in Cognitive Science},
+  number =        {6},
+  pages =         {233--234},
+  title =         {Weak quantitative standards in linguistics research},
+  volume =        {14},
+  year =          {2010},
+  doi={10.1016/j.tics.2010.03.005}
+}
+
+@article{gibson_need_2013,
+  author =        {Gibson, Edward and Fedorenko, Evelina},
+  journal =       {Language and Cognitive Processes},
+  number =        {1-2},
+  pages =         {88--124},
+  title =         {The need for quantitative methods in syntax and
+                   semantics research},
+  volume =        {28},
+  year =          {2013},
+  doi={10.1080/01690965.2010.515080}
+}
+
+@phdthesis{keller_gradience_2000,
+  author =        {Keller, Frank},
+  school =        {University of Edinburgh},
+  title =         {Gradience in grammar: {Experimental} and
+                   computational aspects of degrees of grammaticality},
+  year =          {2000},
+  address={Edinburgh, UK}
+}
+
+@article{sorace_gradience_2005,
+  author =        {Sorace, Antonella and Keller, Frank},
+  journal =       {Lingua},
+  number =        {11},
+  pages =         {1497--1524},
+  title =         {Gradience in linguistic data},
+  volume =        {115},
+  year =          {2005},
+  doi={10.1016/j.lingua.2004.07.002}
+}
+
+@article{sprouse_colorless_2018,
+  author =        {Sprouse, Jon and Yankama, Beracah and
+                   Indurkhya, Sagar and Fong, Sandiway and
+                   Berwick, Robert C.},
+  journal =       {The Linguistic Review},
+  number =        {3},
+  pages =         {575--599},
+  title =         {Colorless green ideas do sleep furiously: {Gradient}
+                   acceptability and the nature of the grammar},
+  volume =        {35},
+  year =          {2018},
+  doi={10.1515/tlr-2018-0005}
+}
+
+@article{lau_grammaticality_2017,
+  author =        {Lau, Jey Han and Clark, Alexander and Lappin, Shalom},
+  journal =       {Cognitive Science},
+  number =        {5},
+  pages =         {1202--1241},
+  title =         {Grammaticality, acceptability, and probability:
+                   {A} probabilistic view of linguistic
+                   knowledge},
+  volume =        {41},
+  year =          {2017},
+  abstract =      {The question of whether humans represent grammatical
+                   knowledge as a binary condition on membership in a
+                   set of well-formed sentences, or as a probabilistic
+                   property has been the subject of debate among
+                   linguists, psychologists, and cognitive scientists
+                   for many decades. Acceptability judgments present a
+                   serious problem for both classical binary and
+                   probabilistic theories of grammaticality. These
+                   judgements are gradient in nature, and so cannot be
+                   directly accommodated in a binary formal grammar.
+                   However, it is also not possible to simply reduce
+                   acceptability to probability. The acceptability of a
+                   sentence is not the same as the likelihood of its
+                   occurrence, which is, in part, determined by factors
+                   like sentence length and lexical frequency. In this
+                   paper, we present the results of a set of large-scale
+                   experiments using crowd-sourced acceptability
+                   judgments that demonstrate gradience to be a
+                   pervasive feature in acceptability judgments. We then
+                   show how one can predict acceptability judgments on
+                   the basis of probability by augmenting probabilistic
+                   language models with an acceptability measure. This
+                   is a function that normalizes probability values to
+                   eliminate the confounding factors of length and
+                   lexical frequency. We describe a sequence of modeling
+                   experiments with unsupervised language models drawn
+                   from state-of-the-art machine learning methods in
+                   natural language processing. Several of these models
+                   achieve very encouraging levels of accuracy in the
+                   acceptability prediction task, as measured by the
+                   correlation between the acceptability measure scores
+                   and mean human acceptability values. We consider the
+                   relevance of these results to the debate on the
+                   nature of grammatical competence, and we argue that
+                   they support the view that linguistic knowledge can
+                   be intrinsically probabilistic.},
+  doi =           {10.1111/cogs.12414}
+}
+
+@incollection{schutze_judgment_2014,
+  author =        {Schütze, Carson T. and Sprouse, Jon},
+  booktitle =     {Research Methods in Linguistics},
+  editor =        {{Robert J. Podesva} and {Devyani Sharma}},
+  pages =         {27--50},
+  publisher =     {Cambridge University Press},
+  address={Cambridge},
+  title =         {Judgment data},
+  year =          {2014},
+  doi={10.1017/CBO9781139013734.004}
+}
+
+@article{sprouse_empirical_2013,
+  author =        {Sprouse, Jon and Almeida, Diogo},
+  journal =       {Language and Cognitive Processes},
+  number =        {3},
+  pages =         {222--228},
+  title =         {The empirical status of data in syntax: {A} reply to
+                   {Gibson} and {Fedorenko}},
+  volume =        {28},
+  year =          {2013},
+  doi={10.1080/01690965.2012.703782}
+}
+@article{sprouse_continuous_2007,
+  author =        {Sprouse, Jon},
+  journal =       {Biolinguistics},
+  pages =         {123--134},
+  title =         {Continuous acceptability, categorical grammaticality,
+                   and experimental syntax},
+  volume =        {1},
+  year =          {2007},
+}
+
+@article{sprouse_validation_2011,
+  author =        {Sprouse, Jon},
+  journal =       {Behavorial Research},
+  pages =         {155--167},
+  title =         {A validation of {Amazon} {Mechanical} {Turk} for the
+                   collection of acceptability judgments in linguistic
+                   theory},
+  volume =        {43},
+  number={1},
+  year =          {2011},
+  doi={10.3758/s13428-010-0039-7}
+}
 @book{schütze_gramaticality_2016,
     author = {Schütze, Carson T.},
     title = {The empirical base of linguistics},
