--- a/notes/background/theoretically-oriented-approach.qmd
+++ b/notes/background/theoretically-oriented-approach.qmd
@@ -1,5 +1,5 @@
 ---
-title: "A theoretically-oriented approach: RSA models"
+title: "Rational Speech Act models"
 bibliography: ../../pds.bib
 format:
   html:
