--- a/pds.bib
+++ b/pds.bib
@@ -3849,7 +3849,7 @@ BibTeX info},
 	number = {1},
 	urldate = {2024-09-17},
 	journal = {Studia Logica},
-	author = {van Benthem, Johan and Gerbrandy, Jelle and Kooi, Barteld},
+	author = {{van Benthem}, Johan and Gerbrandy, Jelle and Kooi, Barteld},
 	month = oct,
 	year = {2009},
 	keywords = {probability, dynamic epistemic logic, Jeffrey’s rule, update},
