--- a/notes/adjectives/pds-to-stan.qmd
+++ b/notes/adjectives/pds-to-stan.qmd
@@ -1,31 +1,55 @@
 ---
+title: "Kernel models"
 bibliography: ../../pds.bib
 format:
   html:
     css: ../styles.css
+    html-math-method: mathjax
+    mathjax-config:
+      loader: {load: ['[tex]/bussproofs','[tex]/bbox','[tex]/colorbox']}
+      tex:
+        packages: {'[+]': ['bussproofs','bbox','colorbox']}
 ---
 
-# From PDS to Stan: Implementing models of gradable adjectives
+::: {.hidden}
+$$
+\newcommand{\expr}[3]{\begin{array}{c}
+#1 \\
+\bbox[lightblue,5px]{#2}
+\end{array} ⊢ #3}
+\newcommand{\ct}[1]{\bbox[font-size: 0.8em]{\mathsf{#1}}}
+\newcommand{\updct}[1]{\ct{upd\_#1}}
+\newcommand{\abbr}[1]{\bbox[transform: scale(0.95)]{\mathtt{#1}}}
+\newcommand{\pure}[1]{\bbox[border: 1px solid orange]{\bbox[border: 4px solid transparent]{#1}}}
+\newcommand{\return}[1]{\bbox[border: 1px solid black]{\bbox[border: 4px solid transparent]{#1}}}
+\def\P{\mathtt{P}}
+\def\Q{\mathtt{Q}}
+\def\True{\ct{T}}
+\def\False{\ct{F}}
+\def\ite{\ct{if\_then\_else}}
+\def\Do{\abbr{do}}
+$$
+:::
 
-Having seen how gradable adjectives are represented in PDS's compositional semantics, we now turn to the practical challenge of implementing statistical models that test these semantic theories against experimental data. The translation from abstract semantic theory to concrete statistical models requires careful attention to how theoretical commitments manifest as computational procedures. This section demonstrates this translation through three increasingly sophisticated models of gradable adjectives.
+Having seen how gradable adjectives are represented in PDS's compositional semantics, we now turn to the practical challenge of implementing statistical models that test these semantic theories against experimental data. The translation from abstract semantic theory to concrete statistical models requires careful attention to how theoretical commitments manifest as computational procedures. This section demonstrates this translation through three increasingly sophisticated models: the first is a relatively simple model of the norming data we just discussed; the second two are models of the gradable adjectives data.
 
-## PDS outputs and kernel models
+## Stan as an intermediary
 
-Before diving into the implementation details, it's important to understand what PDS produces and how it relates to the full statistical models we'll develop. PDS outputs what we term a **kernel model**—the semantic core that corresponds directly to the lexical and compositional semantics. This kernel can in principle be augmented with random effects, hierarchical priors, and other statistical machinery within the Haskell code itself, but the current implementation focuses on producing just the semantic kernel. 
+The translation from abstract semantic analyses to concrete statistical models requires an intermediate representation—a language that can express both the probabilistic structures we theorize and the inference procedures we need to learn from data. Stan has emerged as the *de facto* standard for this role in computational semantics and psycholinguistics [@burkner_brms_2017; @stan_development_team_stan_2024]. We are going to use it for our implementations, but any language with similar expressive power would do.
 
-When we present Stan models in these notes, highlighted lines show the kernel model output by PDS (the semantic core), while non-highlighted lines show statistical augmentations added by the analyst (random effects, priors, etc.).
+Stan is a probabilistic programming language designed for statistical inference. Unlike general-purpose programming languages, Stan is specialized for defining probability distributions and performing Bayesian inference. When we write a Stan program, we're not writing procedures to execute but rather declaring the structure of a probability model. Stan then uses sophisticated algorithms (Hamiltonian Monte Carlo) to sample from the posterior distribution of our model parameters given the observed data.
+
+This approach aligns well with our goals: just as formal semantics declares truth conditions rather than computational procedures, Stan declares probabilistic relationships rather than sampling algorithms. The parallel is not accidental—both frameworks separate the "what" (semantic content, statistical structure) from the "how" (compositional computation, inference algorithms).
+
+## Kernel models
+
+Before diving into the implementation details, it's important to understand what PDS produces and how it relates to the full statistical models we'll develop. PDS outputs what we term a *kernel model*—the semantic core that corresponds directly to the lexical and compositional semantics. This kernel can in principle be augmented with random effects, hierarchical priors, and other statistical machinery within the Haskell code itself, but the current implementation focuses on producing just the semantic kernel. 
 
 This distinction is crucial: PDS automates the translation from compositional semantics to the core statistical model, while leaving room for analysts to add domain-specific statistical structure. As we'll see, this separation allows us to maintain theoretical clarity while building models sophisticated enough to handle real experimental data.
 
 We'll be showing prettified versions of what the system actually outputs. For every model block, we'll also provide the current system output in a footnote.
 
-## Stan: A language for statistical modeling
 
-The translation from abstract semantic theory to concrete statistical models requires a computational intermediary—a language that can express both the probabilistic structures we theorize and the inference procedures we need to learn from data. Stan has emerged as the de facto standard for this role in computational semantics and psycholinguistics [@burkner_brms_2017;@stan_development_team_stan_2024].
-
-Stan is a probabilistic programming language designed for statistical inference. Unlike general-purpose programming languages, Stan is specialized for defining probability distributions and performing Bayesian inference. When we write a Stan program, we're not writing procedures to execute but rather declaring the structure of a probability model. Stan then uses sophisticated algorithms (Hamiltonian Monte Carlo) to sample from the posterior distribution of our model parameters given the observed data.
-
-This approach aligns perfectly with our semantic goals: just as formal semantics declares truth conditions rather than computational procedures, Stan declares probabilistic relationships rather than sampling algorithms. The parallel is not accidental—both frameworks separate the "what" (semantic content, statistical structure) from the "how" (compositional computation, inference algorithms).
 
 ## Case study: Modeling gradable adjectives
 
@@ -73,14 +97,13 @@ Let's start with the simplest possible model for understanding how participants 
 
 Before diving into the Stan code, let's understand what data we're modeling. In a norming experiment, participants see items paired with adjectives and conditions, then provide slider responses from 0 to 1. Here's a sample of the data:
 
-```csv
-"participant","item","item_number","adjective","adjective_number","condition","condition_number","scale_type","scale_type_number","response"
-1,"closed_mid",6,"closed",2,"mid",3,"absolute",1,0.66
-1,"old_mid",24,"old",8,"mid",3,"relative",2,0.51
-1,"expensive_mid",15,"expensive",5,"mid",3,"relative",2,0.62
-1,"full_high",16,"full",6,"high",1,"absolute",1,1
-1,"deep_low",8,"deep",3,"low",2,"relative",2,0.22
-```
+| participant | item | item_number | adjective | adjective_number | condition | condition_number | scale_type | scale_type_number | response |
+|-------------|------|-------------|-----------|------------------|-----------|------------------|------------|-------------------|----------|
+| 1 | closed_mid | 6 | closed | 2 | mid | 3 | absolute | 1 | 0.66 |
+| 1 | old_mid | 24 | old | 8 | mid | 3 | relative | 2 | 0.51 |
+| 1 | expensive_mid | 15 | expensive | 5 | mid | 3 | relative | 2 | 0.62 |
+| 1 | full_high | 16 | full | 6 | high | 1 | absolute | 1 | 1 |
+| 1 | deep_low | 8 | deep | 3 | low | 2 | relative | 2 | 0.22 |
 
 Each row represents one judgment:
 - `participant`: Which person made this judgment (participant 1, 2, etc.)
